# cab-cravings

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/plans/: google_local_eda_plan.md  ingest_download_tlc_plan.md  tlc_data_analysis_plan.md  yelp_eda_plan.md
notebooks/: 01_tlc_eda.ipynb  02_yelp_eda.ipynb  03_google_local_eda.ipynb
src/ingest/: download_tlc.py  download_yelp.py
