[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cab-cravings"
version = "0.1.0"
description = "Taxi-augmented restaurant recommendation POC"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "scikit-learn",
    "lightgbm",
    "scipy",
    "pyarrow",
    "kaggle>=2.0",
    "geopandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
